<resources>
    <string name="app_name">Alexa Remote Control</string>
    <string name="button_login">Login</string>
    <string name="button_get_devices">Volume Test</string>
    <string name="button_submit">MFA Login</string>
    <string name="button_settings">Settings</string>
    <string name="button_save">Save</string>
    <string name="button_about">About</string>
    <string name="lable_email">eMail</string>
    <string name="lable_password">Password</string>
    <string name="lable_room">Room (Device) Name Front seperate by "';'"</string>
    <string name="lable_room_rear">Room (Device) Name Rear seperate by "';'"</string>
    <string name="lable_volume_diff">Volume Difference Rear to Front</string>
    <string name="lable_keypress_wait">Volume KeyPress Wait (ms)</string>
    <string name="label_button_volume_boost">Volume Boost</string>
    <string name="radio_button_volume_fixed">Volume Fixed Level</string>
    <string name="radio_button_volume_adjusted">Volume Adjusted</string>
    <string name="lable_volume_boost_type">Volume Boost Mode</string>
    <string name="lable_volume_diff_type">Volume Difference Rear to Front Mode</string>
    <string name="lable_volume_boost_mode">Volume Boost Group</string>
    <string name="lable_debug_mode">Debug</string>
    <string name="radio_button_volume_boost_mode_to_all">Front / Rear</string>
    <string name="radio_button_volume_boost_mode_to_front">Only Front</string>
    <string name="radio_button_volume_boost_type_add">+</string>
    <string name="radio_button_volume_boost_type_sub">-</string>
    <string name="radio_button_volume_boost_type_multiply">*</string>
    <string name="radio_button_volume_boost_type_divide">/</string>
</resources>