<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_browse_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/verticalLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonLogin"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:onClick="DoLogin"
                android:text="@string/button_login"
                android:textColor="#E91E63"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonClickSubmit"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="ClickSubmit"
                android:text="@string/button_submit"
                android:textColor="#E91E63"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonGetDevices"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:onClick="TestVolumeControl"
                android:text="@string/button_get_devices"
                android:textColor="#E91E63"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonSettings"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:onClick="ShowSettings"
                android:text="@string/button_settings"
                android:textColor="#E91E63"
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="visible"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <WebView
                android:id="@+id/alexaWebViewer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/layoutSettings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_email"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_password"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_room"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextRoomName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lable_volume_diff"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editTextVolumeDiff"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberSigned"
                    android:singleLine="true" />

                <RadioGroup
                    android:id="@+id/radioGroupVolumeCmd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checkedButton="@id/radioButtonVolumeFixed"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonVolumeFixed"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/radio_button_volume_fixed" />

                    <RadioButton
                        android:id="@+id/radioButtonVolumeAdjusted"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_button_volume_adjusted" />
                </RadioGroup>

                <Button
                    android:id="@+id/buttonSaveSettings"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="SaveSettings"
                    android:text="@string/button_save"
                    android:textColor="#E91E63"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>